[package]
name = "clustered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1 # Because wgpu is way too slow otherwise

[[bin]]
name="test-texture"

[dependencies]
env_logger = "0.11"
log = "0.4"
wgpu = { version = "22.1", features = ["spirv"] }
tokio = {version = "1.40", features = ["full"] }
shaderc = "0.8"
bytemuck = "1.18"
flume = "0.11"
image = "0.25"
rand = "0.8"
rayon = "1.10"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9", features = ["base64"] }